updated user_chat page

--- a/views/user/items/user_chat.erb
+++ b/views/user/items/user_chat.erb
@@ -188,8 +188,8 @@
                             <input type="text" name="message" class="form-control" placeholder="Ketik pesan..." required>
                             <input type="hidden" name="product_id" id="product_id_input">
                         </div>
-                        <button type="submit" class="btn btn-primary">
-                            <i class="fas fa-paper-plane"></i>
+                        <button type="submit" class="btn btn-outline-secondary">
+                            <img src="/img/icons/send.svg" alt="Send">
                         </button>
                     </form>
                     
