updated register page & e-commerce.rb

--- a/views/sign/register.erb
+++ b/views/sign/register.erb
@@ -135,3 +135,9 @@
         </div>
     </div>
 </div>
+
+<script>
+    document.getElementById('phone').addEventListener('input', function() {
+        this.value = this.value.replace(/[^0-9]/g, '');
+    });
+</script>
