--- a/views/seller/seller_items/user_transaction_lists.erb
+++ b/views/seller/seller_items/user_transaction_lists.erb
@@ -52,7 +52,9 @@
                                 <td>
                                     <%= t['user_name'] %>
                                 </td>
-                                <td>-</td>  <!-- You can replace this with shipment info later -->
+                                <td>
+                                    <%= t['service_name'] %>
+                                </td>
                                 <td>
                                     <%= t['quantity'] %>
                                 </td>
@@ -70,7 +72,7 @@
                                 </td>
                                 <td>
                                     <% if t['payment_photo'] && !t['payment_photo'].empty? %>
-                                        <img src="/uploads/<%= t['payment_photo'] %>" alt="Payment Photo" width="60">
+                                        <img src="/uploads/payments/<%= t['payment_photo'] %>" alt="Payment Photo" width="200">
                                     <% else %>
                                         <span>No photo</span>
                                     <% end %>
