updated seller_page & sidebar pages

--- a/views/layouts/admin/sidebar.erb
+++ b/views/layouts/admin/sidebar.erb
@@ -45,7 +45,7 @@
                     </a>
                     <a class="nav-link" href="/goods_delivery/<%= current_user['user_id'] %>">
                         <div class="sb-nav-link-icon"><i class="fas fa-truck"></i></div>
-                        Goods Delivery 
+                        Available Delivery  
                     </a>
                     <a class="nav-link" href="/users_wishlist/<%= current_user['user_id'] %>">
                         <div class="sb-nav-link-icon"><i class="fa-solid fa-heart"></i></div>
